01-flux/gilfoyle/apps/homebox/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homebox
  namespace: homebox
  labels:
    app: homebox
spec:
  replicas: 1
  strategy:
    type: Recreate 
  selector:
    matchLabels:
      app: homebox
  template:
    metadata:
      labels:
        app: homebox
    spec:
      containers:
        - name: homebox
          image: ghcr.io/sysadminsmedia/homebox:0.23.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 7745
              name: http
          volumeMounts:
            - name: data
              mountPath: /data/
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: homebox-data
