01-flux/gilfoyle/apps/homebox/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homebox-svc
  namespace: homebox
  labels:
    app: homebox
spec:
  type: ClusterIP
  selector:
    app: homebox
  ports:
    - port: 80
      targetPort: 7745
      protocol: TCP
      name: http
