01-flux/gilfoyle/apps/homebox/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homebox
  namespace: homebox
  labels:
    app: homebox
spec:
  parentRefs:
    - name: gw-external
      namespace: envoy-gateway
  hostnames:
    - "homebox.themiple.ru"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: homebox-svc
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: "x-real-ip"
                value: "%DOWNSTREAM_REMOTE_ADDRESS_WITHOUT_PORT%"
